# APE-reproducible

./: meson.build  runape.pl
prolog/: meson.build
prolog/lexicon/: meson.build
prolog/logger/: meson.build
prolog/parser/: meson.build
prolog/utils/: meson.build  trees_to_ascii.pl
prolog/utils/owlswrl/: meson.build
tests/: .gitignore  meson.build  test_drace.sh  test_drs_to_tptp_out.sh  test_duration.sh  test_ndrace.sh  test_owlswrl.sh
tests/testruns/: meson.build
