configure_file(input: 'chars.pl', output: 'chars.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'clex_lexicon.pl', output: 'clex_lexicon.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'clex.pl', output: 'clex.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'functionwords.pl', output: 'functionwords.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'illegalwords.pl', output: 'illegalwords.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'is_in_lexicon.pl', output: 'is_in_lexicon.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'lexicon_interface.pl', output: 'lexicon_interface.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'ulex.pl', output: 'ulex.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
configure_file(input: 'spellcheck.pl', output: 'spellcheck.pl', install: true, install_dir: libpath / 'lexicon', copy: true)
