run_command(['swipl', '-g', '[fit_to_plp], halt.'])
configure_file(input: 'ace_to_drs.pl', output: 'ace_to_drs.pl', copy: true)
configure_file(input: 'ape_utils.pl', output: 'ape_utils.pl', copy: true)
configure_file(input: 'fit_to_plp.pl', output: 'fit_to_plp.pl', copy: true)
configure_file(input: 'grammar_contentwords.fit', output: 'grammar_contentwords.fit', copy: true)
configure_file(input: 'grammar_functionwords.fit', output: 'grammar_functionwords.fit', copy: true)
configure_file(input: 'grammar.fit', output: 'grammar.fit', copy: true)
configure_file(input: 'grammar_contentwords.plp', output: 'grammar_contentwords.plp', copy: true)
configure_file(input: 'grammar_functionwords.plp', output: 'grammar_functionwords.plp', copy: true)
configure_file(input: 'grammar.plp', output: 'grammar.plp', copy: true)
configure_file(input: 'grammar_words.pl', output: 'grammar_words.pl', copy: true)
configure_file(input: 'make_syntax_report.perl', output: 'make_syntax_report.perl', copy: true)
configure_file(input: 'prologfeatures.pl', output: 'prologfeatures.pl', copy: true)
configure_file(input: 'refres.pl', output: 'refres.pl', copy: true)
configure_file(input: 'sentence_failure.pl', output: 'sentence_failure.pl', copy: true)
configure_file(input: 'sorts.fit', output: 'sorts.fit', copy: true)
configure_file(input: 'sorts.plp', output: 'sorts.plp', copy: true)
configure_file(input: 'tokenizer.pl', output: 'tokenizer.pl', copy: true)
configure_file(input: 'tokens_to_sentences.pl', output: 'tokens_to_sentences.pl', copy: true)