subdir('owlswrl')
configure_file(input: 'ace_niceace.pl', output: 'ace_niceace.pl', copy: true)
configure_file(input: 'are_equivalent.pl', output: 'are_equivalent.pl', copy: true)
configure_file(input: 'drs_ops.pl', output: 'drs_ops.pl', copy: true)
configure_file(input: 'drs_reverse.pl', output: 'drs_reverse.pl', copy: true)
configure_file(input: 'drs_to_ace.pl', output: 'drs_to_ace.pl', copy: true)
configure_file(input: 'drs_to_ascii.pl', output: 'drs_to_ascii.pl', copy: true)
configure_file(input: 'drs_to_coreace.pl', output: 'drs_to_coreace.pl', copy: true)
configure_file(input: 'drs_to_drslist.pl', output: 'drs_to_drslist.pl', copy: true)
configure_file(input: 'drs_to_fol_to_prenex.pl', output: 'drs_to_fol_to_prenex.pl', copy: true)
configure_file(input: 'drs_to_html.pl', output: 'drs_to_html.pl', copy: true)
configure_file(input: 'drs_to_npace.pl', output: 'drs_to_npace.pl', copy: true)
configure_file(input: 'drs_to_ruleml.pl', output: 'drs_to_ruleml.pl', copy: true)
configure_file(input: 'drs_to_sdrs.pl', output: 'drs_to_sdrs.pl', copy: true)
configure_file(input: 'drs_to_tptp.pl', output: 'drs_to_tptp.pl', copy: true)
configure_file(input: 'drs_to_xml.pl', output: 'drs_to_xml.pl', copy: true)
configure_file(input: 'drs_utils.pl', output: 'drs_utils.pl', copy: true)
configure_file(input: 'implication_turn.pl', output: 'implication_turn.pl', copy: true)
configure_file(input: 'is_wellformed.pl', output: 'is_wellformed.pl', copy: true)
configure_file(input: 'morphgen.pl', output: 'morphgen.pl', copy: true)
configure_file(input: 'serialize_term.pl', output: 'serialize_term.pl', copy: true)
configure_file(input: 'tree_utils.pl', output: 'tree_utils.pl', copy: true)
configure_file(input: 'trees_to_ascii.pl', output: 'trees_to_ascii.pl', copy: true)
configure_file(input: 'xmlterm_to_xmlatom.pl', output: 'xmlterm_to_xmlatom.pl', copy: true)