subdir('owlswrl')
configure_file(input: 'ace_niceace.pl', output: 'ace_niceace.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'are_equivalent.pl', output: 'are_equivalent.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_ops.pl', output: 'drs_ops.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_reverse.pl', output: 'drs_reverse.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_ace.pl', output: 'drs_to_ace.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_ascii.pl', output: 'drs_to_ascii.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_coreace.pl', output: 'drs_to_coreace.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_drslist.pl', output: 'drs_to_drslist.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_fol_to_prenex.pl', output: 'drs_to_fol_to_prenex.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_html.pl', output: 'drs_to_html.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_npace.pl', output: 'drs_to_npace.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_ruleml.pl', output: 'drs_to_ruleml.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_sdrs.pl', output: 'drs_to_sdrs.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_tptp.pl', output: 'drs_to_tptp.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_to_xml.pl', output: 'drs_to_xml.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'drs_utils.pl', output: 'drs_utils.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'implication_turn.pl', output: 'implication_turn.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'is_wellformed.pl', output: 'is_wellformed.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'morphgen.pl', output: 'morphgen.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'serialize_term.pl', output: 'serialize_term.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'tree_utils.pl', output: 'tree_utils.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'trees_to_ascii.pl', output: 'trees_to_ascii.pl', install: true, install_dir: libpath / 'utils', copy: true)
configure_file(input: 'xmlterm_to_xmlatom.pl', output: 'xmlterm_to_xmlatom.pl', install: true, install_dir: libpath / 'utils', copy: true)