configure_file(input: 'drs_to_owldrs.pl', output: 'drs_to_owldrs.pl', copy: true)
configure_file(input: 'drs_to_owlswrl_core.pl', output: 'drs_to_owlswrl_core.pl', copy: true)
configure_file(input: 'drs_to_owlswrl.pl', output: 'drs_to_owlswrl.pl', copy: true)
configure_file(input: 'get_owl_output.pl', output: 'get_owl_output.pl', copy: true)
configure_file(input: 'illegal_conditions.pl', output: 'illegal_conditions.pl', copy: true)
configure_file(input: 'implication_to_swrl.pl', output: 'implication_to_swrl.pl', copy: true)
configure_file(input: 'owlfss_owlrdfxml.pl', output: 'owlfss_owlrdfxml.pl', copy: true)
configure_file(input: 'owlswrl_iri.pl', output: 'owlswrl_iri.pl', copy: true)
configure_file(input: 'owlswrl_to_fss.pl', output: 'owlswrl_to_fss.pl', copy: true)
configure_file(input: 'owlswrl_to_xml.pl', output: 'owlswrl_to_xml.pl', copy: true)
configure_file(input: 'simplify_axiom.pl', output: 'simplify_axiom.pl', copy: true)
configure_file(input: 'transform_anonymous.pl', output: 'transform_anonymous.pl', copy: true)